fixed the issue of overflow scroll
for more see this issue https://github.com/daneden/animate.css/issues/739

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   $RESET
 \*-----------------------------------*/
 
+body {
+  overflow-x: hidden;
+}
+
 *, :before, :after {
   margin: 0;
   padding: 0;
